<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            style="@style/CustomTitle"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorTitle"
            android:text="@string/registerName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pseudoTextRegister"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/pseudoName"
            android:inputType="text"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="136dp" />

        <EditText
            android:id="@+id/emailTextRegister"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/emailName"
            android:inputType="textWebEmailAddress"
            tools:layout_editor_absoluteX="73dp" />

        <EditText
            android:id="@+id/passwordTextRegister"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/passwordName"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="207dp"/>

        <EditText
            android:id="@+id/passwordConfirmTextRegister"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/confirmName"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="272dp" />

        <EditText
            android:id="@+id/cityTextRegister"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/cityName"
            android:inputType="text"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="352dp" />

        <Button
            android:id="@+id/btnValidateRegister"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/validateName"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="542dp" />

        <Button
            android:id="@+id/btnBackRegister"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/backName"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="542dp" />

        <Spinner
            android:id="@+id/spinGender"
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:entries="@array/listOfGender"
            android:prompt="@string/spinnerCityName">
        </Spinner>

        <Spinner
            android:id="@+id/spinCity"
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:entries="@array/listOfCity"
            android:prompt="@string/spinnerCityName">
        </Spinner>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow7"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorBackgroundElement"
            app:constraint_referenced_ids="btnValidateRegister,btnBackRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTextRegister" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow2"
            android:layout_width="322dp"
            android:layout_height="429dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="pseudoTextRegister,emailTextRegister,passwordTextRegister,passwordConfirmTextRegister,spinGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="331dp"
            android:layout_height="99dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="spinCity,cityTextRegister"
            app:layout_constraintBottom_toTopOf="@+id/flow7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow2"
            app:layout_constraintVertical_bias="0.48" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>