<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/CustomTitle"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorTitle"
            android:text="@string/welcomeName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/CustomSubTitle"
            android:layout_marginTop="32dp"
            android:text="@string/textMenuName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/CustomButton"
            android:text="@string/loginName"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="473dp" />

        <Button
            android:id="@+id/btnExit"
            style="@style/CustomButton"
            android:text="@string/exitName"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="358dp" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/CustomButton"
            android:text="@string/registerName"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="241dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="317dp"
            android:layout_height="338dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorBackgroundElement"
            android:orientation="vertical"
            app:constraint_referenced_ids="btnLogin,btnRegister,btnExit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
