<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorTitle"
            android:gravity="center_horizontal"
            android:text="@string/connectionName"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pseudoTextLogin"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/pseudoName"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="136dp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordTextLogin"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/passwordName"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="207dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnValidateLogin"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/validateName"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="564dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="297dp"
            android:layout_height="332dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="pseudoTextLogin,passwordTextLogin,btnValidateLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/backName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>