<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView7"
            style="@style/CustomTitle"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorTitle"
            android:text="@string/actionUserTitleName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloName"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="134dp" />

        <TextView
            android:id="@+id/txtNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="113dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow3"
            android:layout_width="272dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:constraint_referenced_ids="textView8,txtNameUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/btnCreateSubject"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/addSubjectName"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="266dp" />

        <Button
            android:id="@+id/btnListSubject"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/listSubjectName"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="334dp" />

        <Button
            android:id="@+id/btnDisconnectActionUser"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/disconnectName"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="402dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="308dp"
            android:layout_height="338dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorBackgroundElement"
            android:orientation="vertical"
            app:constraint_referenced_ids="btnCreateSubject,btnListSubject,btnDisconnectActionUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>