<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView9"
            style="@style/CustomTitle"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorTitle"
            android:text="@string/messageTitleName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleSubjectMessage"
            android:layout_width="310dp"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="114dp" />

        <TextView
            android:id="@+id/messageTextSubjectMessage"
            android:layout_width="310dp"
            android:layout_height="125dp"
            android:scrollbars="vertical"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="30dp" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="333dp"
            android:layout_height="152dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow5">

            <LinearLayout
                android:id="@+id/linearLayoutMessage"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorBackgroundElement"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageTextSubjectMessage"></LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btnValidateMessageMessage"
            style="@style/CustomButton"
            android:text="@string/validateName"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="887dp" />

        <Button
            android:id="@+id/btnBackCreateMessage"
            style="@style/CustomButton"
            android:text="@string/backName"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="923dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow5"
            android:layout_width="339dp"
            android:layout_height="166dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="titleSubjectMessage,messageTextSubjectMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow6"
            android:layout_width="397dp"
            android:layout_height="110dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorBackgroundElement"
            app:constraint_referenced_ids="btnValidateMessageMessage,btnBackCreateMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTextSubjectByUser" />

        <EditText
            android:id="@+id/messageTextSubjectByUser"
            android:layout_width="341dp"
            android:layout_height="88dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/messageName"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>